Finishing swagger
